// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with body1 detailVariant 1`] = `
<section
  className="natds-NatDSIntro-root-1"
>
  <h3
    className="natds-MuiTypography-root natds-NatDSIntro-introTitle-3 natds-NatDSIntro-introTitle-4 natds-MuiTypography-subtitle1 natds-MuiTypography-colorTextPrimary"
  >
    title
  </h3>
  <p
    className="natds-MuiTypography-root natds-NatDSIntro-introDetail-2 natds-MuiTypography-body1 natds-MuiTypography-colorTextPrimary"
  >
    detail
  </p>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with body1 titleVariant 1`] = `
<section
  className="natds-NatDSIntro-root-1"
>
  <h3
    className="natds-MuiTypography-root natds-NatDSIntro-introTitle-3 natds-NatDSIntro-introTitle-4 natds-MuiTypography-body1 natds-MuiTypography-colorTextPrimary"
  >
    title
  </h3>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with body2 detailVariant 1`] = `
<section
  className="natds-NatDSIntro-root-1"
>
  <h3
    className="natds-MuiTypography-root natds-NatDSIntro-introTitle-3 natds-NatDSIntro-introTitle-4 natds-MuiTypography-subtitle1 natds-MuiTypography-colorTextPrimary"
  >
    title
  </h3>
  <p
    className="natds-MuiTypography-root natds-NatDSIntro-introDetail-2 natds-MuiTypography-body2 natds-MuiTypography-colorTextPrimary"
  >
    detail
  </p>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with body2 titleVariant 1`] = `
<section
  className="natds-NatDSIntro-root-1"
>
  <h3
    className="natds-MuiTypography-root natds-NatDSIntro-introTitle-3 natds-NatDSIntro-introTitle-4 natds-MuiTypography-body2 natds-MuiTypography-colorTextPrimary"
  >
    title
  </h3>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with button detailVariant 1`] = `
<section
  className="natds-NatDSIntro-root-1"
>
  <h3
    className="natds-MuiTypography-root natds-NatDSIntro-introTitle-3 natds-NatDSIntro-introTitle-4 natds-MuiTypography-subtitle1 natds-MuiTypography-colorTextPrimary"
  >
    title
  </h3>
  <p
    className="natds-MuiTypography-root natds-NatDSIntro-introDetail-2 natds-MuiTypography-button natds-MuiTypography-colorTextPrimary"
  >
    detail
  </p>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with button titleVariant 1`] = `
<section
  className="natds-NatDSIntro-root-1"
>
  <h3
    className="natds-MuiTypography-root natds-NatDSIntro-introTitle-3 natds-NatDSIntro-introTitle-4 natds-MuiTypography-button natds-MuiTypography-colorTextPrimary"
  >
    title
  </h3>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with caption detailVariant 1`] = `
<section
  className="natds-NatDSIntro-root-1"
>
  <h3
    className="natds-MuiTypography-root natds-NatDSIntro-introTitle-3 natds-NatDSIntro-introTitle-4 natds-MuiTypography-subtitle1 natds-MuiTypography-colorTextPrimary"
  >
    title
  </h3>
  <p
    className="natds-MuiTypography-root natds-NatDSIntro-introDetail-2 natds-MuiTypography-caption natds-MuiTypography-colorTextPrimary"
  >
    detail
  </p>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with caption titleVariant 1`] = `
<section
  className="natds-NatDSIntro-root-1"
>
  <h3
    className="natds-MuiTypography-root natds-NatDSIntro-introTitle-3 natds-NatDSIntro-introTitle-4 natds-MuiTypography-caption natds-MuiTypography-colorTextPrimary"
  >
    title
  </h3>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with error detailColor 1`] = `
<section
  className="natds-NatDSIntro-root-1"
>
  <h3
    className="natds-MuiTypography-root natds-NatDSIntro-introTitle-3 natds-NatDSIntro-introTitle-4 natds-MuiTypography-subtitle1 natds-MuiTypography-colorTextPrimary"
  >
    title
  </h3>
  <p
    className="natds-MuiTypography-root natds-NatDSIntro-introDetail-2 natds-MuiTypography-body2 natds-MuiTypography-colorError"
  >
    detail
  </p>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with error titleColor 1`] = `
<section
  className="natds-NatDSIntro-root-1"
>
  <h3
    className="natds-MuiTypography-root natds-NatDSIntro-introTitle-3 natds-NatDSIntro-introTitle-4 natds-MuiTypography-subtitle1 natds-MuiTypography-colorError"
  >
    title
  </h3>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with h1 detailVariant 1`] = `
<section
  className="natds-NatDSIntro-root-1"
>
  <h3
    className="natds-MuiTypography-root natds-NatDSIntro-introTitle-3 natds-NatDSIntro-introTitle-4 natds-MuiTypography-subtitle1 natds-MuiTypography-colorTextPrimary"
  >
    title
  </h3>
  <p
    className="natds-MuiTypography-root natds-NatDSIntro-introDetail-2 natds-MuiTypography-h1 natds-MuiTypography-colorTextPrimary"
  >
    detail
  </p>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with h1 titleVariant 1`] = `
<section
  className="natds-NatDSIntro-root-1"
>
  <h3
    className="natds-MuiTypography-root natds-NatDSIntro-introTitle-3 natds-NatDSIntro-introTitle-4 natds-MuiTypography-h1 natds-MuiTypography-colorTextPrimary"
  >
    title
  </h3>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with h2 detailVariant 1`] = `
<section
  className="natds-NatDSIntro-root-1"
>
  <h3
    className="natds-MuiTypography-root natds-NatDSIntro-introTitle-3 natds-NatDSIntro-introTitle-4 natds-MuiTypography-subtitle1 natds-MuiTypography-colorTextPrimary"
  >
    title
  </h3>
  <p
    className="natds-MuiTypography-root natds-NatDSIntro-introDetail-2 natds-MuiTypography-h2 natds-MuiTypography-colorTextPrimary"
  >
    detail
  </p>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with h2 titleVariant 1`] = `
<section
  className="natds-NatDSIntro-root-1"
>
  <h3
    className="natds-MuiTypography-root natds-NatDSIntro-introTitle-3 natds-NatDSIntro-introTitle-4 natds-MuiTypography-h2 natds-MuiTypography-colorTextPrimary"
  >
    title
  </h3>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with h3 detailVariant 1`] = `
<section
  className="natds-NatDSIntro-root-1"
>
  <h3
    className="natds-MuiTypography-root natds-NatDSIntro-introTitle-3 natds-NatDSIntro-introTitle-4 natds-MuiTypography-subtitle1 natds-MuiTypography-colorTextPrimary"
  >
    title
  </h3>
  <p
    className="natds-MuiTypography-root natds-NatDSIntro-introDetail-2 natds-MuiTypography-h3 natds-MuiTypography-colorTextPrimary"
  >
    detail
  </p>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with h3 titleVariant 1`] = `
<section
  className="natds-NatDSIntro-root-1"
>
  <h3
    className="natds-MuiTypography-root natds-NatDSIntro-introTitle-3 natds-NatDSIntro-introTitle-4 natds-MuiTypography-h3 natds-MuiTypography-colorTextPrimary"
  >
    title
  </h3>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with h4 detailVariant 1`] = `
<section
  className="natds-NatDSIntro-root-1"
>
  <h3
    className="natds-MuiTypography-root natds-NatDSIntro-introTitle-3 natds-NatDSIntro-introTitle-4 natds-MuiTypography-subtitle1 natds-MuiTypography-colorTextPrimary"
  >
    title
  </h3>
  <p
    className="natds-MuiTypography-root natds-NatDSIntro-introDetail-2 natds-MuiTypography-h4 natds-MuiTypography-colorTextPrimary"
  >
    detail
  </p>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with h4 titleVariant 1`] = `
<section
  className="natds-NatDSIntro-root-1"
>
  <h3
    className="natds-MuiTypography-root natds-NatDSIntro-introTitle-3 natds-NatDSIntro-introTitle-4 natds-MuiTypography-h4 natds-MuiTypography-colorTextPrimary"
  >
    title
  </h3>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with h5 detailVariant 1`] = `
<section
  className="natds-NatDSIntro-root-1"
>
  <h3
    className="natds-MuiTypography-root natds-NatDSIntro-introTitle-3 natds-NatDSIntro-introTitle-4 natds-MuiTypography-subtitle1 natds-MuiTypography-colorTextPrimary"
  >
    title
  </h3>
  <p
    className="natds-MuiTypography-root natds-NatDSIntro-introDetail-2 natds-MuiTypography-h5 natds-MuiTypography-colorTextPrimary"
  >
    detail
  </p>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with h5 titleVariant 1`] = `
<section
  className="natds-NatDSIntro-root-1"
>
  <h3
    className="natds-MuiTypography-root natds-NatDSIntro-introTitle-3 natds-NatDSIntro-introTitle-4 natds-MuiTypography-h5 natds-MuiTypography-colorTextPrimary"
  >
    title
  </h3>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with h6 detailVariant 1`] = `
<section
  className="natds-NatDSIntro-root-1"
>
  <h3
    className="natds-MuiTypography-root natds-NatDSIntro-introTitle-3 natds-NatDSIntro-introTitle-4 natds-MuiTypography-subtitle1 natds-MuiTypography-colorTextPrimary"
  >
    title
  </h3>
  <p
    className="natds-MuiTypography-root natds-NatDSIntro-introDetail-2 natds-MuiTypography-h6 natds-MuiTypography-colorTextPrimary"
  >
    detail
  </p>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with h6 titleVariant 1`] = `
<section
  className="natds-NatDSIntro-root-1"
>
  <h3
    className="natds-MuiTypography-root natds-NatDSIntro-introTitle-3 natds-NatDSIntro-introTitle-4 natds-MuiTypography-h6 natds-MuiTypography-colorTextPrimary"
  >
    title
  </h3>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with inherit detailColor 1`] = `
<section
  className="natds-NatDSIntro-root-1"
>
  <h3
    className="natds-MuiTypography-root natds-NatDSIntro-introTitle-3 natds-NatDSIntro-introTitle-4 natds-MuiTypography-subtitle1 natds-MuiTypography-colorTextPrimary"
  >
    title
  </h3>
  <p
    className="natds-MuiTypography-root natds-NatDSIntro-introDetail-2 natds-MuiTypography-body2 natds-MuiTypography-colorInherit"
  >
    detail
  </p>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with inherit detailVariant 1`] = `
<section
  className="natds-NatDSIntro-root-1"
>
  <h3
    className="natds-MuiTypography-root natds-NatDSIntro-introTitle-3 natds-NatDSIntro-introTitle-4 natds-MuiTypography-subtitle1 natds-MuiTypography-colorTextPrimary"
  >
    title
  </h3>
  <p
    className="natds-MuiTypography-root natds-NatDSIntro-introDetail-2 natds-MuiTypography-colorTextPrimary"
  >
    detail
  </p>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with inherit titleColor 1`] = `
<section
  className="natds-NatDSIntro-root-1"
>
  <h3
    className="natds-MuiTypography-root natds-NatDSIntro-introTitle-3 natds-NatDSIntro-introTitle-4 natds-MuiTypography-subtitle1 natds-MuiTypography-colorInherit"
  >
    title
  </h3>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with inherit titleVariant 1`] = `
<section
  className="natds-NatDSIntro-root-1"
>
  <h3
    className="natds-MuiTypography-root natds-NatDSIntro-introTitle-3 natds-NatDSIntro-introTitle-4 natds-MuiTypography-colorTextPrimary"
  >
    title
  </h3>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with initial detailColor 1`] = `
<section
  className="natds-NatDSIntro-root-1"
>
  <h3
    className="natds-MuiTypography-root natds-NatDSIntro-introTitle-3 natds-NatDSIntro-introTitle-4 natds-MuiTypography-subtitle1 natds-MuiTypography-colorTextPrimary"
  >
    title
  </h3>
  <p
    className="natds-MuiTypography-root natds-NatDSIntro-introDetail-2 natds-MuiTypography-body2"
  >
    detail
  </p>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with initial titleColor 1`] = `
<section
  className="natds-NatDSIntro-root-1"
>
  <h3
    className="natds-MuiTypography-root natds-NatDSIntro-introTitle-3 natds-NatDSIntro-introTitle-4 natds-MuiTypography-subtitle1"
  >
    title
  </h3>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with overline detailVariant 1`] = `
<section
  className="natds-NatDSIntro-root-1"
>
  <h3
    className="natds-MuiTypography-root natds-NatDSIntro-introTitle-3 natds-NatDSIntro-introTitle-4 natds-MuiTypography-subtitle1 natds-MuiTypography-colorTextPrimary"
  >
    title
  </h3>
  <p
    className="natds-MuiTypography-root natds-NatDSIntro-introDetail-2 natds-MuiTypography-overline natds-MuiTypography-colorTextPrimary"
  >
    detail
  </p>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with overline titleVariant 1`] = `
<section
  className="natds-NatDSIntro-root-1"
>
  <h3
    className="natds-MuiTypography-root natds-NatDSIntro-introTitle-3 natds-NatDSIntro-introTitle-4 natds-MuiTypography-overline natds-MuiTypography-colorTextPrimary"
  >
    title
  </h3>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with primary detailColor 1`] = `
<section
  className="natds-NatDSIntro-root-1"
>
  <h3
    className="natds-MuiTypography-root natds-NatDSIntro-introTitle-3 natds-NatDSIntro-introTitle-4 natds-MuiTypography-subtitle1 natds-MuiTypography-colorTextPrimary"
  >
    title
  </h3>
  <p
    className="natds-MuiTypography-root natds-NatDSIntro-introDetail-2 natds-MuiTypography-body2 natds-MuiTypography-colorPrimary"
  >
    detail
  </p>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with primary titleColor 1`] = `
<section
  className="natds-NatDSIntro-root-1"
>
  <h3
    className="natds-MuiTypography-root natds-NatDSIntro-introTitle-3 natds-NatDSIntro-introTitle-4 natds-MuiTypography-subtitle1 natds-MuiTypography-colorPrimary"
  >
    title
  </h3>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with secondary detailColor 1`] = `
<section
  className="natds-NatDSIntro-root-1"
>
  <h3
    className="natds-MuiTypography-root natds-NatDSIntro-introTitle-3 natds-NatDSIntro-introTitle-4 natds-MuiTypography-subtitle1 natds-MuiTypography-colorTextPrimary"
  >
    title
  </h3>
  <p
    className="natds-MuiTypography-root natds-NatDSIntro-introDetail-2 natds-MuiTypography-body2 natds-MuiTypography-colorSecondary"
  >
    detail
  </p>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with secondary titleColor 1`] = `
<section
  className="natds-NatDSIntro-root-1"
>
  <h3
    className="natds-MuiTypography-root natds-NatDSIntro-introTitle-3 natds-NatDSIntro-introTitle-4 natds-MuiTypography-subtitle1 natds-MuiTypography-colorSecondary"
  >
    title
  </h3>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with subtitle1 detailVariant 1`] = `
<section
  className="natds-NatDSIntro-root-1"
>
  <h3
    className="natds-MuiTypography-root natds-NatDSIntro-introTitle-3 natds-NatDSIntro-introTitle-4 natds-MuiTypography-subtitle1 natds-MuiTypography-colorTextPrimary"
  >
    title
  </h3>
  <p
    className="natds-MuiTypography-root natds-NatDSIntro-introDetail-2 natds-MuiTypography-subtitle1 natds-MuiTypography-colorTextPrimary"
  >
    detail
  </p>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with subtitle1 titleVariant 1`] = `
<section
  className="natds-NatDSIntro-root-1"
>
  <h3
    className="natds-MuiTypography-root natds-NatDSIntro-introTitle-3 natds-NatDSIntro-introTitle-4 natds-MuiTypography-subtitle1 natds-MuiTypography-colorTextPrimary"
  >
    title
  </h3>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with subtitle2 detailVariant 1`] = `
<section
  className="natds-NatDSIntro-root-1"
>
  <h3
    className="natds-MuiTypography-root natds-NatDSIntro-introTitle-3 natds-NatDSIntro-introTitle-4 natds-MuiTypography-subtitle1 natds-MuiTypography-colorTextPrimary"
  >
    title
  </h3>
  <p
    className="natds-MuiTypography-root natds-NatDSIntro-introDetail-2 natds-MuiTypography-subtitle2 natds-MuiTypography-colorTextPrimary"
  >
    detail
  </p>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with subtitle2 titleVariant 1`] = `
<section
  className="natds-NatDSIntro-root-1"
>
  <h3
    className="natds-MuiTypography-root natds-NatDSIntro-introTitle-3 natds-NatDSIntro-introTitle-4 natds-MuiTypography-subtitle2 natds-MuiTypography-colorTextPrimary"
  >
    title
  </h3>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with textPrimary detailColor 1`] = `
<section
  className="natds-NatDSIntro-root-1"
>
  <h3
    className="natds-MuiTypography-root natds-NatDSIntro-introTitle-3 natds-NatDSIntro-introTitle-4 natds-MuiTypography-subtitle1 natds-MuiTypography-colorTextPrimary"
  >
    title
  </h3>
  <p
    className="natds-MuiTypography-root natds-NatDSIntro-introDetail-2 natds-MuiTypography-body2 natds-MuiTypography-colorTextPrimary"
  >
    detail
  </p>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with textPrimary titleColor 1`] = `
<section
  className="natds-NatDSIntro-root-1"
>
  <h3
    className="natds-MuiTypography-root natds-NatDSIntro-introTitle-3 natds-NatDSIntro-introTitle-4 natds-MuiTypography-subtitle1 natds-MuiTypography-colorTextPrimary"
  >
    title
  </h3>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with textSecondary detailColor 1`] = `
<section
  className="natds-NatDSIntro-root-1"
>
  <h3
    className="natds-MuiTypography-root natds-NatDSIntro-introTitle-3 natds-NatDSIntro-introTitle-4 natds-MuiTypography-subtitle1 natds-MuiTypography-colorTextPrimary"
  >
    title
  </h3>
  <p
    className="natds-MuiTypography-root natds-NatDSIntro-introDetail-2 natds-MuiTypography-body2 natds-MuiTypography-colorTextSecondary"
  >
    detail
  </p>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with textSecondary titleColor 1`] = `
<section
  className="natds-NatDSIntro-root-1"
>
  <h3
    className="natds-MuiTypography-root natds-NatDSIntro-introTitle-3 natds-NatDSIntro-introTitle-4 natds-MuiTypography-subtitle1 natds-MuiTypography-colorTextSecondary"
  >
    title
  </h3>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Intro with title and detail 1`] = `
<section
  className="natds-NatDSIntro-root-1"
>
  <h3
    className="natds-MuiTypography-root natds-NatDSIntro-introTitle-3 natds-NatDSIntro-introTitle-4 natds-MuiTypography-subtitle1 natds-MuiTypography-colorTextPrimary"
  >
    title
  </h3>
  <p
    className="natds-MuiTypography-root natds-NatDSIntro-introDetail-2 natds-MuiTypography-body2 natds-MuiTypography-colorTextPrimary"
  >
    detail
  </p>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Intro with title and icon 1`] = `
<section
  className="natds-NatDSIntro-root-1"
>
  <h3
    className="natds-MuiTypography-root natds-NatDSIntro-introTitle-3 natds-NatDSIntro-introTitle-4 natds-MuiTypography-subtitle1 natds-MuiTypography-colorTextPrimary"
  >
    <i
      aria-hidden={true}
      className="material-icons natds-MuiIcon-root natds-icons natds-icons-filled-action-add natds-NatDSIcon-root-5 natds-NatDSIcon-root-6"
    />
    title
  </h3>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Intro with title and without detail 1`] = `
<section
  className="natds-NatDSIntro-root-1"
>
  <h3
    className="natds-MuiTypography-root natds-NatDSIntro-introTitle-3 natds-NatDSIntro-introTitle-4 natds-MuiTypography-subtitle1 natds-MuiTypography-colorTextPrimary"
  >
    title
  </h3>
</section>
`;

exports[`Intro component when a theme is explicitly provided when an invalid titleVariant property is provided should match snapshot 1`] = `
<section
  className="natds-NatDSIntro-root-1"
>
  <h3
    className="natds-MuiTypography-root natds-NatDSIntro-introTitle-3 natds-NatDSIntro-introTitle-4 natds-MuiTypography-colorTextPrimary"
  >
    Test title
  </h3>
</section>
`;

exports[`Intro component when a theme is explicitly provided when titleVariant property is undefined should match snapshot 1`] = `
<section
  className="natds-NatDSIntro-root-1"
>
  <h3
    className="natds-MuiTypography-root natds-NatDSIntro-introTitle-3 natds-NatDSIntro-introTitle-4 natds-MuiTypography-subtitle1 natds-MuiTypography-colorTextPrimary"
  >
    Test title
  </h3>
</section>
`;

exports[`Intro component when no theme is explicitly provided and titleVariant property is undefined should match snapshot 1`] = `
<section
  className="NatDSIntro-root-1"
>
  <h3
    className="MuiTypography-root NatDSIntro-introTitle-3 NatDSIntro-introTitle-4 MuiTypography-subtitle1 MuiTypography-colorTextPrimary"
  >
    Test title
  </h3>
</section>
`;

exports[`Intro component when no theme is explicitly provided when an invalid titleVariant property is provided should match snapshot 1`] = `
<section
  className="NatDSIntro-root-1"
>
  <h3
    className="MuiTypography-root NatDSIntro-introTitle-3 NatDSIntro-introTitle-5 MuiTypography-colorTextPrimary"
  >
    Test title
  </h3>
</section>
`;
